Added sonarqube configurations, swagger comments and updated dockerfile
